syntax = "proto3";

package tokenValidation;

option go_package = "./tokenValidation";

service TokenValidation {
	rpc ValidateToken (TokenRequest) returns (TokenResponse);
}

message TokenRequest {
	string token = 1;
}

message TokenResponse {
	string message = 1;
	UserData data = 2;
}

message UserData {
	int64 user_id = 1;
	string username = 2;
	string full_name = 3;
}
